# rustedfoil_server

./: .rustfmt.toml  Cargo.toml  run_reload.sh
src/: main.rs  routes.rs  switch.rs
src/server/: auth.rs  file.rs  mod.rs  routes.rs
