[package]
name = "rustedfoil_server"
version = "0.1.0"
authors = ["nekoinemo <nekoinemo@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "1"
dotenv = "0.15"
itertools = "0.10"
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
uuid = { version = "0.8", features = ["serde", "v4", "v5"] }
walkdir = "2"

futures = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6.3", features = ["full"]}

listenfd = "0.3"
warp = "0.3"
headers = "0.3"

bb8-postgres = { version = "0.7", features = ["with-uuid-0_8"] }
